data/derived/fa15/progs/unify/prog1139.ml.out
Characters 128-129:
  let l = sepConcat t in
                    ^
Error: This expression has type string list
       but an expression was expected of type string
